Updated Item Model
Updated the item model and icon. Updated damage buff value.
Item is now a green item (tier 2) instead of a white item (tier 1).

--- a/SpaceSpinach/SpaceSpinach.csproj
+++ b/SpaceSpinach/SpaceSpinach.csproj
@@ -6,10 +6,12 @@
 
   <ItemGroup>
     <None Remove="bonemeal" />
+    <None Remove="spacespinachbundle" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="bonemeal" />
+    <EmbeddedResource Include="spacespinachbundle" />
   </ItemGroup>
 
   <ItemGroup>
